--- a/Lab6/Laboratorio6_Enunciado.ipynb
+++ b/Lab6/Laboratorio6_Enunciado.ipynb
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {
     "cell_id": "00015-9f304f85-cc91-43d5-b9e0-e16decca6cd0",
     "colab": {
@@ -418,7 +418,7 @@
        "4 2009-12-01 07:45:00   1.25     13085.0  United Kingdom  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,193 +521,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_out = pd.DataFrame(columns = [\"Customer ID\"])\n",
-    "df_out[\"Customer ID\"] = df_retail['Customer ID'].unique()  \n",
-    "    \n",
-    "df_out = df_out.merge((df_retail.groupby([\"Customer ID\"])[\"InvoiceDate\"].max() \n",
-    "                         - df_retail.groupby([\"Customer ID\"])[\"InvoiceDate\"].min()).reset_index().rename(columns={\"InvoiceDate\":'L'})\n",
-    "                         , on=\"Customer ID\",how=\"left\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        59\n",
-       "1       372\n",
-       "2       290\n",
-       "3       373\n",
-       "4       373\n",
-       "       ... \n",
-       "4309      0\n",
-       "4310      0\n",
-       "4311      0\n",
-       "4312      0\n",
-       "4313      0\n",
-       "Name: L, Length: 4314, dtype: int64"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_out[\"L\"] = .dt.days"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Customer ID</th>\n",
-       "      <th>L</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>12346.0</td>\n",
-       "      <td>196 days 05:19:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>12347.0</td>\n",
-       "      <td>37 days 00:37:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>12348.0</td>\n",
-       "      <td>0 days 00:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>12349.0</td>\n",
-       "      <td>181 days 19:03:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>12351.0</td>\n",
-       "      <td>0 days 00:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4309</th>\n",
-       "      <td>18283.0</td>\n",
-       "      <td>275 days 22:14:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4310</th>\n",
-       "      <td>18284.0</td>\n",
-       "      <td>0 days 00:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4311</th>\n",
-       "      <td>18285.0</td>\n",
-       "      <td>0 days 00:00:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4312</th>\n",
-       "      <td>18286.0</td>\n",
-       "      <td>247 days 01:12:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4313</th>\n",
-       "      <td>18287.0</td>\n",
-       "      <td>188 days 23:56:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4314 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Customer ID                 L\n",
-       "0        12346.0 196 days 05:19:00\n",
-       "1        12347.0  37 days 00:37:00\n",
-       "2        12348.0   0 days 00:00:00\n",
-       "3        12349.0 181 days 19:03:00\n",
-       "4        12351.0   0 days 00:00:00\n",
-       "...          ...               ...\n",
-       "4309     18283.0 275 days 22:14:00\n",
-       "4310     18284.0   0 days 00:00:00\n",
-       "4311     18285.0   0 days 00:00:00\n",
-       "4312     18286.0 247 days 01:12:00\n",
-       "4313     18287.0 188 days 23:56:00\n",
-       "\n",
-       "[4314 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(df_retail.groupby([\"Customer ID\"])[\"InvoiceDate\"].max() \n",
-    "                         - df_retail.groupby([\"Customer ID\"])[\"InvoiceDate\"].min()).reset_index().rename(columns={\"InvoiceDate\":'L'})"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_retail.groupby([\"Customer ID\"])[\"InvoiceDate\"].diff()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 62,
    "metadata": {
     "cell_id": "00020-1a24ff7c-fd2f-416e-8275-2107b7dc2a78",
     "deepnote_cell_height": 84,
     "deepnote_cell_type": "code",
     "tags": []
    },
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 16)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<tokenize>\"\u001b[1;36m, line \u001b[1;32m16\u001b[0m\n\u001b[1;33m    df_out[]\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def custom_features(dataframe_in):\n",
     "    df_in = dataframe_in.copy() #Se crea una copia del dataframe de entrada\n",
@@ -716,25 +546,60 @@
     "    # Se crea el dataframe de salida\n",
     "    df_out = pd.DataFrame(columns = [\"Customer ID\"])\n",
     "    df_out[\"Customer ID\"] = df_in['Customer ID'].unique()\n",
-    "    \n",
-    "    #df_aux = df_retail.groupby([\"Customer ID\"])[\"InvoiceDate\"].max().reset_index().rename(columns={\"InvoiceDate\":'max'})\n",
-    "    \n",
-    "    \n",
+    "        \n",
     "    ## Length\n",
-    "    df_out = df_out.merge((df_retail.groupby([\"Customer ID\"])[\"InvoiceDate\"].max() \n",
-    "                         - df_retail.groupby([\"Customer ID\"])[\"InvoiceDate\"].min()).reset_index().rename(columns={\"InvoiceDate\":'L'})\n",
+    "    df_out = df_out.merge((df_in.groupby([\"Customer ID\"])[\"InvoiceDate\"].max() \n",
+    "                         - df_in.groupby([\"Customer ID\"])[\"InvoiceDate\"].min()).reset_index().rename(columns={\"InvoiceDate\":'Length'})\n",
     "                         , on=\"Customer ID\",how=\"left\")\n",
-    "    df_out['L'] = df_out['L']+1\n",
+    "    df_out['Length'] = df_out['Length'].dt.days + 1\n",
     "    \n",
     "    ## Recency\n",
+    "    #df_in.groupby(['Customer ID'])['Invoice'].nunique() #n: cantidad de compras distintas de un cliente\n",
     "    \n",
-    "    ## Monetary\n",
+    "    \n",
+    "    ## Monetarys    \n",
+    "    aux1 = df_in.drop_duplicates(subset=['Customer ID', 'Invoice'])[[\"Customer ID\",\"Invoice\"]] #Customer and Invoice\n",
+    "    aux2 = (df_in.groupby([\"Invoice\"])[\"Price\"].sum()).reset_index().rename(columns={\"Price\":'PriceSum'}) #Invoice and sumprice\n",
+    "    aux2 = aux2.merge(aux1, on=[\"Invoice\"])\n",
+    "    aux2 = aux2.groupby([\"Customer ID\"]).mean().reset_index().rename(columns={\"PriceSum\":'PriceMean'})\n",
+    "    df_out = df_out.merge(aux2,on=[\"Customer ID\"]).rename(columns={\"PriceMean\":'Monetary'})\n",
     "    \n",
     "    ## Frequency\n",
+    "    df_out = df_out.merge(df_in.groupby(['Customer ID'])['Invoice'].nunique().reset_index().rename(columns={\"Invoice\":\"Frequency\"}), on=[\"Customer ID\"])\n",
     "    \n",
     "    ## Periodicity\n",
     "    \n",
-    "    "
+    "    return(df_out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Customer ID  Length  Monetary  Frequency\n",
+      "0        12346.0     197   18.7600         11\n",
+      "1        12347.0      38   81.4750          2\n",
+      "2        12348.0       1   14.3900          1\n",
+      "3        12349.0     182  291.7800          3\n",
+      "4        12351.0       1   49.4600          1\n",
+      "...          ...     ...       ...        ...\n",
+      "4309     18283.0     276   79.5450          6\n",
+      "4310     18284.0       1   91.0900          1\n",
+      "4311     18285.0       1  100.2000          1\n",
+      "4312     18286.0     248  143.1500          2\n",
+      "4313     18287.0     189   60.4475          4\n",
+      "\n",
+      "[4314 rows x 4 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(custom_features(df_retail))"
    ]
   },
   {
