--- a/Lab6/Laboratorio6_Enunciado.ipynb
+++ b/Lab6/Laboratorio6_Enunciado.ipynb
@@ -521,9 +521,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0           NaT\n",
+       "1        0 days\n",
+       "2        0 days\n",
+       "3        0 days\n",
+       "4        0 days\n",
+       "          ...  \n",
+       "400942   0 days\n",
+       "400943   0 days\n",
+       "400944   0 days\n",
+       "400945   0 days\n",
+       "400946   0 days\n",
+       "Name: InvoiceDate, Length: 400947, dtype: timedelta64[ns]"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_retail.groupby([\"Customer ID\"])[\"InvoiceDate\"].diff()"
    ]
@@ -569,12 +591,13 @@
     "    \n",
     "    ## Periodicity\n",
     "    \n",
+    "    \n",
     "    return(df_out)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +789,17 @@
     "tags": []
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "## Clase 15\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "pipe = Pipeline([(\"LRMFP\", custom_features()),\n",
+    "                 ('scaler', MinMax()),\n",
+    "                 (\"Tsne\",      )])\n",
+    "\n",
+    "pipe.fit_transform(df_retail)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -820,15 +853,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "cell_id": "00035-f3c2ae6a-fc69-41da-b714-076734e1845e",
     "deepnote_cell_height": 66,
     "deepnote_cell_type": "code",
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'scaled_features' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-76-49f48f2d890e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0minertias\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Clusters\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinspace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m21\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0minertias\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Inertia\"\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mKMeans\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_clusters\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mscaled_features\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minertia_\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m px.line(\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'scaled_features' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "inertias = pd.DataFrame(columns = [\"Clusterts\",\"Inertia\"])\n",
+    "inertias[\"Clusters\"] = np.linspace(1,20,20)\n",
+    "for i in range(1,21):\n",
+    "    inertias.loc[i-1,\"Inertia\"] = KMeans(n_clusters=i, random_state=0).fit(DATA).inertia_\n",
+    "    \n",
+    "px.line(\n",
+    "    intertias,\n",
+    "    x=\"Clusters\",\n",
+    "    y=\"Inertia\",\n",
+    "    title=\"Método del Codo con K-Means\",\n",
+    "    height=600,\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
