--- a/Lab6/Laboratorio6_Enunciado.ipynb
+++ b/Lab6/Laboratorio6_Enunciado.ipynb
@@ -521,38 +521,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customer ID</th>\n",
+       "      <th>MaxDate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12346.0</td>\n",
+       "      <td>2010-06-28 13:53:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12347.0</td>\n",
+       "      <td>2010-12-07 14:57:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12348.0</td>\n",
+       "      <td>2010-09-27 14:59:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12349.0</td>\n",
+       "      <td>2010-10-28 08:23:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12351.0</td>\n",
+       "      <td>2010-11-29 15:23:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4309</th>\n",
+       "      <td>18283.0</td>\n",
+       "      <td>2010-11-22 15:30:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4310</th>\n",
+       "      <td>18284.0</td>\n",
+       "      <td>2010-10-04 11:33:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4311</th>\n",
+       "      <td>18285.0</td>\n",
+       "      <td>2010-02-17 10:24:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4312</th>\n",
+       "      <td>18286.0</td>\n",
+       "      <td>2010-08-20 11:57:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4313</th>\n",
+       "      <td>18287.0</td>\n",
+       "      <td>2010-11-22 11:51:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4314 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0           NaT\n",
-       "1        0 days\n",
-       "2        0 days\n",
-       "3        0 days\n",
-       "4        0 days\n",
-       "          ...  \n",
-       "400942   0 days\n",
-       "400943   0 days\n",
-       "400944   0 days\n",
-       "400945   0 days\n",
-       "400946   0 days\n",
-       "Name: InvoiceDate, Length: 400947, dtype: timedelta64[ns]"
+       "     Customer ID             MaxDate\n",
+       "0        12346.0 2010-06-28 13:53:00\n",
+       "1        12347.0 2010-12-07 14:57:00\n",
+       "2        12348.0 2010-09-27 14:59:00\n",
+       "3        12349.0 2010-10-28 08:23:00\n",
+       "4        12351.0 2010-11-29 15:23:00\n",
+       "...          ...                 ...\n",
+       "4309     18283.0 2010-11-22 15:30:00\n",
+       "4310     18284.0 2010-10-04 11:33:00\n",
+       "4311     18285.0 2010-02-17 10:24:00\n",
+       "4312     18286.0 2010-08-20 11:57:00\n",
+       "4313     18287.0 2010-11-22 11:51:00\n",
+       "\n",
+       "[4314 rows x 2 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_retail.groupby([\"Customer ID\"])[\"InvoiceDate\"].diff()"
+    "aux"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Customer ID\n",
+       "12346.0    1773\n",
+       "12347.0      39\n",
+       "12348.0       1\n",
+       "12349.0     346\n",
+       "12351.0       1\n",
+       "           ... \n",
+       "18283.0     880\n",
+       "18284.0       1\n",
+       "18285.0       1\n",
+       "18286.0     249\n",
+       "18287.0     314\n",
+       "Name: DateDiff, Length: 4314, dtype: int64"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aux2.groupby(\"Customer ID\")[\"DateDiff\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
    "metadata": {
     "cell_id": "00020-1a24ff7c-fd2f-416e-8275-2107b7dc2a78",
     "deepnote_cell_height": 84,
@@ -575,9 +700,23 @@
     "                         , on=\"Customer ID\",how=\"left\")\n",
     "    df_out['Length'] = df_out['Length'].dt.days + 1\n",
     "    \n",
+    "    \n",
+    "    ## Frequency\n",
+    "    df_out = df_out.merge(df_in.groupby(['Customer ID'])['Invoice'].nunique().reset_index().rename(columns={\"Invoice\":\"Frequency\"}), on=[\"Customer ID\"])\n",
+    "    \n",
+    "    \n",
     "    ## Recency\n",
     "    #df_in.groupby(['Customer ID'])['Invoice'].nunique() #n: cantidad de compras distintas de un cliente\n",
+    "    aux1 = df_in.drop_duplicates(subset=['Customer ID', 'Invoice']).groupby([\"Customer ID\"])[\"InvoiceDate\"].max()\n",
+    "    aux1 = aux1.reset_index().rename(columns={\"InvoiceDate\":'MaxDate'})\n",
+    "    aux2 = df_retail.drop_duplicates(subset=['Customer ID', 'Invoice']).merge(aux,on=\"Customer ID\")\n",
+    "    aux2[\"DateDiff\"] = aux2[\"MaxDate\"] - aux2[\"InvoiceDate\"]\n",
+    "    aux2[\"DateDiff\"] = aux2[\"DateDiff\"].dt.days + 1\n",
     "    \n",
+    "    df_out = df_out.merge(aux2.groupby([\"Customer ID\"])[\"DateDiff\"].sum().reset_index().rename(columns={\"DateDiff\":\"DateDiffSum\"}), on=\"Customer ID\")\n",
+    "    \n",
+    "    df_out[\"Recency\"] = df_out[\"DateDiffSum\"]/df_out[\"Frequency\"]\n",
+    "    df_out = df_out.drop([\"DateDiffSum\"],axis=1)\n",
     "    \n",
     "    ## Monetarys    \n",
     "    aux1 = df_in.drop_duplicates(subset=['Customer ID', 'Invoice'])[[\"Customer ID\",\"Invoice\"]] #Customer and Invoice\n",
@@ -585,9 +724,6 @@
     "    aux2 = aux2.merge(aux1, on=[\"Invoice\"])\n",
     "    aux2 = aux2.groupby([\"Customer ID\"]).mean().reset_index().rename(columns={\"PriceSum\":'PriceMean'})\n",
     "    df_out = df_out.merge(aux2,on=[\"Customer ID\"]).rename(columns={\"PriceMean\":'Monetary'})\n",
-    "    \n",
-    "    ## Frequency\n",
-    "    df_out = df_out.merge(df_in.groupby(['Customer ID'])['Invoice'].nunique().reset_index().rename(columns={\"Invoice\":\"Frequency\"}), on=[\"Customer ID\"])\n",
     "    \n",
     "    ## Periodicity\n",
     "    \n",
@@ -597,27 +733,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Customer ID  Length  Monetary  Frequency\n",
-      "0        12346.0     197   18.7600         11\n",
-      "1        12347.0      38   81.4750          2\n",
-      "2        12348.0       1   14.3900          1\n",
-      "3        12349.0     182  291.7800          3\n",
-      "4        12351.0       1   49.4600          1\n",
-      "...          ...     ...       ...        ...\n",
-      "4309     18283.0     276   79.5450          6\n",
-      "4310     18284.0       1   91.0900          1\n",
-      "4311     18285.0       1  100.2000          1\n",
-      "4312     18286.0     248  143.1500          2\n",
-      "4313     18287.0     189   60.4475          4\n",
+      "     Customer ID  Length  Frequency     Recency  Monetary\n",
+      "0        12346.0     197         11  161.181818   18.7600\n",
+      "1        12347.0      38          2   19.500000   81.4750\n",
+      "2        12348.0       1          1    1.000000   14.3900\n",
+      "3        12349.0     182          3  115.333333  291.7800\n",
+      "4        12351.0       1          1    1.000000   49.4600\n",
+      "...          ...     ...        ...         ...       ...\n",
+      "4309     18283.0     276          6  146.666667   79.5450\n",
+      "4310     18284.0       1          1    1.000000   91.0900\n",
+      "4311     18285.0       1          1    1.000000  100.2000\n",
+      "4312     18286.0     248          2  124.500000  143.1500\n",
+      "4313     18287.0     189          4   78.500000   60.4475\n",
       "\n",
-      "[4314 rows x 4 columns]\n"
+      "[4314 rows x 5 columns]\n"
      ]
     }
    ],
