--- a/Lab6/Laboratorio6_Enunciado.ipynb
+++ b/Lab6/Laboratorio6_Enunciado.ipynb
@@ -521,38 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0                      NaT\n",
-       "8          0 days 00:01:00\n",
-       "12                     NaT\n",
-       "31                     NaT\n",
-       "54                     NaT\n",
-       "                ...       \n",
-       "400790    13 days 23:42:00\n",
-       "400815    13 days 23:51:00\n",
-       "400844    11 days 05:00:00\n",
-       "400857    20 days 23:37:00\n",
-       "400882   217 days 00:00:00\n",
-       "Name: InvoiceDate, Length: 19215, dtype: timedelta64[ns]"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_retail.drop_duplicates(subset=[\"Customer ID\",\"Invoice\"]).groupby([\"Customer ID\"])[\"InvoiceDate\"].diff()#[\"InvoiceDate\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 180,
    "metadata": {
     "cell_id": "00020-1a24ff7c-fd2f-416e-8275-2107b7dc2a78",
     "deepnote_cell_height": 84,
@@ -600,34 +569,51 @@
     "    df_out = df_out.merge(aux2,on=[\"Customer ID\"]).rename(columns={\"PriceMean\":'Monetary'})\n",
     "    \n",
     "    ## Periodicity\n",
+    "    aux1 = df_in.drop_duplicates(subset=[\"Customer ID\",\"Invoice\"])\n",
+    "    aux1[\"diff\"] = aux1.groupby(\"Customer ID\")[\"InvoiceDate\"].diff().dt.days.fillna(0)\n",
+    "    df_out = df_out.merge(aux1.groupby(\"Customer ID\")[\"diff\"].std().fillna(0), on=\"Customer ID\")   \n",
     "    \n",
     "    \n",
-    "    return(df_out)"
+    "    return(df_out.round())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Customer ID  Length  Frequency     Recency  Monetary\n",
-      "0        12346.0     197         11  161.181818   18.7600\n",
-      "1        12347.0      38          2   19.500000   81.4750\n",
-      "2        12348.0       1          1    1.000000   14.3900\n",
-      "3        12349.0     182          3  115.333333  291.7800\n",
-      "4        12351.0       1          1    1.000000   49.4600\n",
-      "...          ...     ...        ...         ...       ...\n",
-      "4309     18283.0     276          6  146.666667   79.5450\n",
-      "4310     18284.0       1          1    1.000000   91.0900\n",
-      "4311     18285.0       1          1    1.000000  100.2000\n",
-      "4312     18286.0     248          2  124.500000  143.1500\n",
-      "4313     18287.0     189          4   78.500000   60.4475\n",
+      "     Customer ID  Length  Frequency  Recency  Monetary   diff\n",
+      "0        12346.0     197         11    161.0      19.0   35.0\n",
+      "1        12347.0      38          2     20.0      81.0   26.0\n",
+      "2        12348.0       1          1      1.0      14.0    0.0\n",
+      "3        12349.0     182          3    115.0     292.0   89.0\n",
+      "4        12351.0       1          1      1.0      49.0    0.0\n",
+      "...          ...     ...        ...      ...       ...    ...\n",
+      "4309     18283.0     276          6    147.0      80.0   60.0\n",
+      "4310     18284.0       1          1      1.0      91.0    0.0\n",
+      "4311     18285.0       1          1      1.0     100.0    0.0\n",
+      "4312     18286.0     248          2    124.0     143.0  175.0\n",
+      "4313     18287.0     189          4     78.0      60.0   61.0\n",
       "\n",
-      "[4314 rows x 5 columns]\n"
+      "[4314 rows x 6 columns]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-180-fef02f9a441a>:41: SettingWithCopyWarning:\n",
+      "\n",
+      "\n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "\n"
      ]
     }
    ],
