--- a/Lab6/Laboratorio6_Enunciado.ipynb
+++ b/Lab6/Laboratorio6_Enunciado.ipynb
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 60,
    "metadata": {
     "cell_id": "00029-b78cc7d2-05a8-4f86-a882-02e13ae67762",
     "deepnote_cell_height": 84,
@@ -783,14 +783,16 @@
    "outputs": [],
    "source": [
     "class MinMax(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self,Data):\n",
+    "        self.Data = Data\n",
+    "        \n",
+    "    def ColumnTransformer(self, column):\n",
+    "        minimo = min(self.Data[column])\n",
+    "        maximo = max(self.Data[column])\n",
+    "        self.Data[column] = ((self.Data[column]-minimo)/(maximo-minimo))\n",
     "    \n",
-    "    def ColumnTransformer(self, Data,column):\n",
-    "        minimo = min(Data[column])\n",
-    "        maximo = max(Data[column])\n",
-    "        return ((Data[column]-minimo)/(maximo-minimo))\n",
-    "    \n",
-    "    def DatasetTransformer(self,Data):\n",
-    "        self.TransformedData = Data.copy()\n",
+    "    def DatasetTransformer(self):\n",
+    "        self.TransformedData = self.Data.copy()\n",
     "        columns = self.TransformedData.columns\n",
     "        for col in columns:\n",
     "            try:\n",
@@ -846,28 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "DatasetTransformer() missing 1 required positional argument: 'Data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-23-0140beffa10f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mMinMax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDatasetTransformer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: DatasetTransformer() missing 1 required positional argument: 'Data'"
-     ]
-    }
-   ],
-   "source": [
-    "MinMax().ColumnTransformer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -886,13 +867,16 @@
     },
     {
      "ename": "TypeError",
-     "evalue": "ColumnTransformer() missing 2 required positional arguments: 'Data' and 'column'",
+     "evalue": "'ABCMeta' object is not iterable",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-28-76827e0b2815>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m column_transformer = ColumnTransformer(\n\u001b[0;32m      9\u001b[0m     transformers=[\n\u001b[1;32m---> 10\u001b[1;33m         \"MinMax\",MinMax().ColumnTransformer(),[\"Length\",\"Frequency\",\"Recency\",\"Monetary\",\"Periodicity\"]])\n\u001b[0m\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m pipe = Pipeline([(\"features\",function_transformer),\n",
-      "\u001b[1;31mTypeError\u001b[0m: ColumnTransformer() missing 2 required positional arguments: 'Data' and 'column'"
+      "\u001b[1;32m<ipython-input-71-6d32f74d3ad6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     14\u001b[0m                 (\"minmax\",column_transformer)])\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[0mdf_preprocesado\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpipe\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_retail\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\pipeline.py\u001b[0m in \u001b[0;36mfit_transform\u001b[1;34m(self, X, y, **fit_params)\u001b[0m\n\u001b[0;32m    374\u001b[0m             \u001b[0mfit_params_last_step\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfit_params_steps\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msteps\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    375\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlast_step\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'fit_transform'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 376\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mlast_step\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit_transform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mXt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mfit_params_last_step\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    377\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    378\u001b[0m                 return last_step.fit(Xt, y,\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\compose\\_column_transformer.py\u001b[0m in \u001b[0;36mfit_transform\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m    525\u001b[0m         \u001b[1;31m# set n_features_in_ attribute\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    526\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_check_n_features\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mreset\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 527\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_validate_transformers\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    528\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_validate_column_callables\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    529\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_validate_remainder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\sklearn\\compose\\_column_transformer.py\u001b[0m in \u001b[0;36m_validate_transformers\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    274\u001b[0m             \u001b[1;32mreturn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    275\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 276\u001b[1;33m         \u001b[0mnames\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtransformers\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransformers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    277\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    278\u001b[0m         \u001b[1;31m# validate names\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'ABCMeta' object is not iterable"
      ]
     }
    ],
@@ -901,15 +885,183 @@
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import StandardScaler, OneHotEncoder,FunctionTransformer\n",
     "\n",
-    "function_transformer = FunctionTransformer(func=custom_features(df_retail))\n",
+    "#minmax = MinMax()\n",
+    "\n",
+    "function_transformer = FunctionTransformer(func=custom_features)\n",
     "\n",
     "column_transformer = ColumnTransformer(\n",
     "    transformers=[\n",
-    "        \"MinMax\",MinMax().ColumnTransformer(),[\"Length\",\"Frequency\",\"Recency\",\"Monetary\",\"Periodicity\"]])\n",
+    "        \"MinMax\",ColumnTransformer,[\"Length\",\"Frequency\",\"Recency\",\"Monetary\",\"Periodicity\"]])\n",
     "\n",
     "pipe = Pipeline([(\"features\",function_transformer),\n",
     "                (\"minmax\",column_transformer)])\n",
-    "\n"
+    "\n",
+    "df_preprocesado = pipe.fit_transform(df_retail)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customer ID</th>\n",
+       "      <th>Length</th>\n",
+       "      <th>Frequency</th>\n",
+       "      <th>Recency</th>\n",
+       "      <th>Monetary</th>\n",
+       "      <th>Periodicity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>12346</td>\n",
+       "      <td>197</td>\n",
+       "      <td>11</td>\n",
+       "      <td>161</td>\n",
+       "      <td>19</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12347</td>\n",
+       "      <td>38</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>81</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12348</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>12349</td>\n",
+       "      <td>182</td>\n",
+       "      <td>3</td>\n",
+       "      <td>115</td>\n",
+       "      <td>292</td>\n",
+       "      <td>89</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12351</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>49</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4309</th>\n",
+       "      <td>18283</td>\n",
+       "      <td>276</td>\n",
+       "      <td>6</td>\n",
+       "      <td>147</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4310</th>\n",
+       "      <td>18284</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>91</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4311</th>\n",
+       "      <td>18285</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4312</th>\n",
+       "      <td>18286</td>\n",
+       "      <td>248</td>\n",
+       "      <td>2</td>\n",
+       "      <td>124</td>\n",
+       "      <td>143</td>\n",
+       "      <td>175</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4313</th>\n",
+       "      <td>18287</td>\n",
+       "      <td>189</td>\n",
+       "      <td>4</td>\n",
+       "      <td>78</td>\n",
+       "      <td>60</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4314 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Customer ID  Length  Frequency  Recency  Monetary  Periodicity\n",
+       "0           12346     197         11      161        19           35\n",
+       "1           12347      38          2       20        81           26\n",
+       "2           12348       1          1        1        14            0\n",
+       "3           12349     182          3      115       292           89\n",
+       "4           12351       1          1        1        49            0\n",
+       "...           ...     ...        ...      ...       ...          ...\n",
+       "4309        18283     276          6      147        80           60\n",
+       "4310        18284       1          1        1        91            0\n",
+       "4311        18285       1          1        1       100            0\n",
+       "4312        18286     248          2      124       143          175\n",
+       "4313        18287     189          4       78        60           61\n",
+       "\n",
+       "[4314 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_preprocesado"
    ]
   },
   {
